minor CSS spacing issues

--- a/musicplayer8/music_converter/static/music_converter/css/main.scss
+++ b/musicplayer8/music_converter/static/music_converter/css/main.scss
@@ -19,7 +19,7 @@ section#main {
     flex-direction: column;
     max-width: 1200px;
     width: 90%;
-    margin: 100px auto;
+    margin: 150px auto;
 
     .logo{
         img{
